--- a/style.css
+++ b/style.css
@@ -18,3 +18,28 @@ header {
     font-size: 1.5rem;
     font-weight: bold;
 }
+
+.image {
+    width: 100%;
+}
+
+.post-article {
+    position: relative;
+}
+
+.like-button {
+    position: absolute;
+    bottom: 1rem;
+    right: 1rem;
+    font-size: 3rem;
+    background: none;
+    border: none;
+    text-shadow: 0.0.0.2rem black;
+    cursor: pointer;
+    transition: all 300ms;
+}
+
+.like-button:hover {
+    scale: 110%;
+    /*transform: scale(1.1);*/
+}
